hphp/test/zend/bad/ext/spl/tests/spl_heap_recoverfromcorruption_arguments.php
<?php
  $h = new SplMaxHeap();
  //Line below should throw a warning as no args are expected
  $h->recoverFromCorruption("no args");
?>